[twirl-rpc-examples] create board
