# twirp-rpc-examples/card/servers/boardserver.go
@@ -30,6 +30,14 @@ func (svc *BoardServer) UpdateBoard(ctx context.Context, input *pb.BoardUpdateIn
 	return nil, nil
 }
 
+func (svc *BoardServer) AddMember(context.Context, *pb.AddMemberInput) (*pb.Board, error) {
+	return nil, nil
+}
+
+func (svc *BoardServer) AddLabel(context.Context, *pb.AddLabelInput) (*pb.Board, error) {
+	return nil, nil
+}
+
 func (svc *BoardServer) GetByID(ctx context.Context, input *pb.GetByIDInput) (*pb.Board, error) {
 	res, err := svc.boardSvc.ResolveByID(ctx, input.Id)
 	if err != nil {
@@ -40,8 +48,43 @@ func (svc *BoardServer) GetByID(ctx context.Context, input *pb.GetByIDInput) (*p
 
 func ToBoardInputFromCreateInputPb(pbInput *pb.BoardCreateInput) board.Input {
 	return board.Input{
-		Title: pbInput.Title,
+		Title:   pbInput.Title,
+		Members: ToBoardMemberInputFromPb(pbInput.Members),
+		Lists:   ToBoardListInputFromPb(pbInput.Lists),
+		Labels:  ToBoardLabelInputFromPb(pbInput.Labels),
 	}
+}
+
+func ToBoardMemberInputFromPb(ls []*pb.AddMemberInput) []board.MemberInput {
+	res := make([]board.MemberInput, 0)
+	for _, inputPb := range ls {
+		res = append(res, board.MemberInput{
+			UserID: inputPb.UserId,
+		})
+	}
+	return res
+}
+
+func ToBoardLabelInputFromPb(ls []*pb.AddLabelInput) []board.LabelInput {
+	res := make([]board.LabelInput, 0)
+	for _, inputPb := range ls {
+		res = append(res, board.LabelInput{
+			Title: inputPb.Name,
+			Color: inputPb.Color,
+		})
+	}
+	return res
+}
+
+func ToBoardListInputFromPb(ls []*pb.AddListInput) []board.ListInput {
+	res := make([]board.ListInput, 0)
+	for _, inputPb := range ls {
+		res = append(res, board.ListInput{
+			Title:    inputPb.Name,
+			Position: int(inputPb.Position),
+		})
+	}
+	return res
 }
 
 func ToBoardInputFromUpdateInputPb(pbInput *pb.BoardUpdateInput) board.Input {
@@ -54,6 +97,9 @@ func ToBoardPb(entity board.Board) *pb.Board {
 	return &pb.Board{
 		Id:        entity.ID,
 		Title:     entity.Title,
+		Members:   ToBoardMembersPb(entity.Members),
+		Lists:     ToBoardListsPb(entity.Lists),
+		Labels:    ToBoardLabelsPb(entity.Labels),
 		CreatedAt: ToTimestampPb(entity.CreatedAt),
 		UpdatedAt: ToTimestampPb(entity.UpdatedAt),
 	}
@@ -62,6 +108,51 @@ func ToBoardPb(entity board.Board) *pb.Board {
 func ToTimestampPb(ts time.Time) *timestampPb.Timestamp {
 	return &timestampPb.Timestamp{
 		Seconds: ts.Unix(),
-		Nanos:   int32(ts.UnixNano()),
+		Nanos:   int32(ts.Nanosecond()),
 	}
+}
+
+func ToBoardMembersPb(ls []board.BoardMember) []*pb.BoardMember {
+	res := make([]*pb.BoardMember, 0)
+	for _, entity := range ls {
+		res = append(res, &pb.BoardMember{
+			Id:        entity.ID,
+			BoardId:   entity.BoardID,
+			UserId:    entity.UserID,
+			CreatedAt: ToTimestampPb(entity.CreatedAt),
+		})
+	}
+	return res
+}
+
+func ToBoardListsPb(ls []board.BoardList) []*pb.BoardList {
+	res := make([]*pb.BoardList, 0)
+	for _, entity := range ls {
+		res = append(res, &pb.BoardList{
+			Id:        entity.ID,
+			BoardId:   entity.BoardID,
+			PublicId:  entity.PublicID,
+			Title:     entity.Title,
+			Position:  int32(entity.Position),
+			CreatedAt: ToTimestampPb(entity.CreatedAt),
+			UpdatedAt: ToTimestampPb(entity.UpdatedAt),
+		})
+	}
+	return res
+}
+
+func ToBoardLabelsPb(ls []board.Label) []*pb.BoardLabel {
+	res := make([]*pb.BoardLabel, 0)
+	for _, entity := range ls {
+		res = append(res, &pb.BoardLabel{
+			Id:        entity.ID,
+			BoardId:   entity.BoardID,
+			Slug:      entity.Slug,
+			Title:     entity.Title,
+			Color:     entity.Color,
+			CreatedAt: ToTimestampPb(entity.CreatedAt),
+			UpdatedAt: ToTimestampPb(entity.CreatedAt),
+		})
+	}
+	return res
 }
